Collapse More Cotations, Solved bug in seller search, prevented 10 minutes result bets

--- a/bet_bola/static/css/main.css
+++ b/bet_bola/static/css/main.css
@@ -449,17 +449,17 @@ span.step-links li.active a{
     margin-top: 6px;
 }
 
-.more-cotation{
+
+.more-cotation {
     cursor: pointer;
-    width: 60%;
+    width: 50%;
     margin: auto;
     height: 100%;
     display: block;
     background-color: #289c6a;
-    padding: 10px 6px;
-    color:#ffffff;
+    padding: 6px 10px;
+    color: #ffffff;
     font-weight: bold;
-    margin-top: 6px;
 }
 
 .more-cotation-name{
